# ray-tracing-vk

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  run.sh
src/: Singleton.h  camera.cpp  camera.h  diagnostics.cpp  diagnostics.h  main.cpp  mesh.cpp  mesh.h  scene.cpp  scene.h  window.cpp  window.h
src/shaders/: shader.frag  shader.vert
src/vulkan/: acc_struct.cpp  acc_struct.h  allocator.cpp  allocator.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  constants.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device_manager.cpp  device_manager.h  engine.cpp  engine.h  ext_fns.cpp  ext_fns.h  fence.cpp  fence.h  frame_buffer.cpp  frame_buffer.h  graphics_pipeline.cpp  graphics_pipeline.h  host_device.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  phys_device.cpp  phys_device.h  pipeline_layout.cpp  pipeline_layout.h  (+18 more)
